--- a/client/src/components/Landing/Landing.module.scss
+++ b/client/src/components/Landing/Landing.module.scss
@@ -1,9 +1,17 @@
 .bg {
   height: 100% !important;
   min-height: 100vh;
-  background: url('../../img/landing.jpg') no-repeat center center/cover
-    rgba(0, 0, 0, 0.7);
-  position: fixed;
+  // background: url('../../img/landing.jpg') no-repeat center center/cover
+  // rgba(0, 0, 0, 0.7);
+  // position: fixed;
+}
+
+.img {
+  max-height: 300px;
+
+  @media screen and (min-width: 420px) {
+    margin: 30px 0;
+  }
 }
 
 .leadText {
@@ -18,7 +26,7 @@
   justify-content: center;
 
   & > * {
-    color: #fff !important;
+    // color: #fff !important;
   }
 }
 
