--- a/client/src/components/layout/Navbar/Navbar.module.scss
+++ b/client/src/components/layout/Navbar/Navbar.module.scss
@@ -13,3 +13,15 @@
   font-size: 24px !important;
   margin-right: 10px;
 }
+
+.styledBadge {
+  background-color: #ff6584;
+  color: #fff !important;
+  padding: 0 6px;
+  min-width: 16px;
+  height: 16px;
+  border-radius: 8px;
+  line-height: 14px;
+  font-size: 10px;
+  box-shadow: 0 0 0 1px #001529 inset;
+}
